--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       behavior="smooth"
       direction="left"
       style="
-        background-color: #a81764;
-        color: #fff;
+        background-color: #fff;
+        color: #a81764;
         font-size: 2rem;
         letter-spacing: 3px;
         font-weight: 800;
