--- a/index.html
+++ b/index.html
@@ -587,6 +587,7 @@
     <!-- section-flex -->
 
     <!-- Latest compiled JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
