--- a/index.html
+++ b/index.html
@@ -282,29 +282,6 @@
         </div>
       </div>
       <!-- What did we do -->
-      <div class="container text-center">
-        <div
-          class="about pb-3"
-          style="background-color: #740d57; color: #fff; padding-top: 50px"
-        >
-          <h1>What can we do</h1>
-          <p class="text-center p-5">
-            We provide fast, reliable repairs for mobile phones and laptops.
-            Whether it's a cracked screen, battery issue, or software problem,
-            out expert technicians quickly diagnose and fix your device using
-            high-quailty parts. With affordable prices and a focus on customer
-            satisfaction, we ensure your devices are back to working like
-            new--often within the same day.
-          </p>
-          <button
-            class="btn btn-1 m-2"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-          >
-            <i class="fa fa-phone p-2"></i>Get a Query
-          </button>
-        </div>
-      </div>
 
       <!-- Mobile Repiars -->
       <div class="container">
@@ -364,6 +341,7 @@
       </div>
 
         <!-- Services -->
+      <div class="container">
         <div
           class="container-2"
           style="
@@ -398,6 +376,7 @@
           </button>
         </div>
       </div>
+    </div>
     </section>
 
     <!-- section-flex -->
