--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           data-bs-toggle="collapse"
           data-bs-target="#mynavbar"
         >
-          <span class="navbar-toggler-icon" style="color:#a81764"></span>
+          <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="navbar-nav m-auto">
