--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title>Fixo Phones Repairs</title>
 
@@ -23,8 +23,8 @@
       behavior="smooth"
       direction="left"
       style="
-        background-color: #fff;
-        color: #a81764;
+        background-color: #a81764;
+        color: #fff;
         font-size: 2rem;
         letter-spacing: 3px;
         font-weight: 800;
@@ -35,7 +35,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-sm fixed">
       <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">Logo</a>
+        <a class="navbar-brand " href="./index.html"><img class="logo" src="./image/2.png" alt=""></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,7 +45,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
-          <ul class="navbar-nav m-auto">
+          <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link active" href="./index.html">Home</a>
             </li>
@@ -82,7 +82,7 @@
               <div class="modal-dialog modal-dialog-scrollable modal-lg">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <img src="" alt="img" />
+                    <img class="logo" src="./image/2.png" alt="img" />
                     <h1 class="modal-title fs-5" id="exampleModalLabel">
                       Get A Query
                     </h1>
@@ -255,7 +255,7 @@
                       Close
                     </button>
                     <button type="submit" class="btn btn-2">
-                      Save changes
+                    Submit
                     </button>
                   </div>
                 </div>
@@ -283,6 +283,8 @@
       </div>
       <!-- What did we do -->
 
+      <!-- What we Provide -->
+
       <!-- Mobile Repiars -->
       <div class="container">
         <div class="container-1">
@@ -291,7 +293,7 @@
           </div>
           <div class="box">
             <div class="text">
-              <h1>Mobile Phone Repairs</h1>
+              <h1>Mobile Phone ,Laptop and Gidget Repairs</h1>
               <p>
                 <li>
                   <strong style="letter-spacing: 2px"
@@ -327,25 +329,18 @@
                   infections.
                 </li>
               </p>
-              <button
-                type="button"
-                class="btn btn-1"
-                data-bs-toggle="modal"
-                data-bs-target="#exampleModal"
-              >
-                <i class="fa fa-phone p-2"></i>Get a Query
-              </button>
+             
             </div>
           </div>
         </div>
       </div>
 
-        <!-- Services -->
       <div class="container">
+        <!-- Services -->
         <div
           class="container-2"
           style="
-            background-color: #740d57;
+            background-color: #a81764;
             color: #fff;
             padding: 30px;
             font-family: Poppins;
@@ -354,35 +349,22 @@
         >
           <h2 class="text-center p-3">Services</h2>
           <p>
-            A mobile and laptop repair shop provides essential services for
-            fixing and maintaining smartphones, laptops, and other electronic
-            devices. These shops typically handle issues such as screen
-            replacements, battery repairs, software troubleshooting, and
-            hardware fixes like charging port or motherboard repairs.
-            Technicians use specialized tools and diagnostic software to assess
-            and repair devices, ensuring a fast and efficient service. The shop
-            may also offer data recovery, virus removal, and general maintenance
-            services for both individual customers and businesses. With
-            expertise in both hardware and software, these repair shops are
-            crucial for extending the lifespan of devices, providing warranty
-            options, and offering competitive pricing for common repair needs.
+            We provide essential services for fixing and maintaining smartphones, laptops, and other electronic devices. We typically handle issues such as screen replacements, battery repairs, software troubleshooting, and hardware fixes like charging port or motherboard repairs.Our Technicians use specialized tools and diagnostic software to assess and repair devices, ensuring a fast and efficient service. We may also offer data recovery, virus removal, and general maintenance services for both individual customers and businesses. With expertise in both hardware and software, Our services are crucial for extending the lifespan of devices, providing warranty options, and offering competitive pricing for common repair needs.
           </p>
           <button class="btn btn-1">
             <a
               href="./service.html"
-              style="text-decoration: none; color: #a81764"
+              style="text-decoration: none; color: #740d57"
               >Read More</a
             >
           </button>
         </div>
       </div>
-    </div>
     </section>
 
     <!-- section-flex -->
 
     <!-- Latest compiled JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
