--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <!-- home container -->
     <section id="home">
       <div class="container home">
-        <img src="./image/main-bg.jpg" alt="main" style="width: 100%" />
+        <img src="./image/Banner.jpg" alt="main" style="width: 100%" />
         <div class="centered">
           <button
             type="button"
