--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,14 @@
           <form class="d-flex">
             <!-- Button trigger modal -->
             <!-- Button trigger modal -->
-            <a href="https://wa.me/923476985088" target="_blank" class="new-1 m-2"
-            ><i class="fa fa-whatsapp"></i
-          ></a>
+             <button
+            type="button"
+            class="btn btn-1 m-2"
+          >
+          <a href="https://wa.me/923476985088" target="_blank" class="new-1 m-2"
+          ><i class="fa fa-whatsapp"></i
+        ></a>
+          </button>
             <button
               type="button"
               class="btn btn-1"
