--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <section id="home">
       <div class="container home">
         <img src="./image/Banner.jpg" alt="main" style="width: 100%" />
-        <div class="centered-bottom">
+        <div class="centered">
           <button
             type="button"
             class="btn btn-1"
