--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
     <section id="home">
       <div class="container home">
         <img src="./image/Banner.jpg" alt="main" style="width: 100%" />
-        <div class="centered" style="top:90%;">
+        <div class="centered" style="top:90%;background-color:#740d57; color:#fff">
           <button
             type="button"
             class="btn btn-1"
