--- a/index.html
+++ b/index.html
@@ -273,10 +273,11 @@
     <section id="home">
       <div class="container home">
         <img src="./image/Banner.jpg" alt="main" style="width: 100%" />
-        <div class="centered" style="top:90%;background-color:#740d57; color:#fff">
+        <div class="centered" style="top:90%;">
           <button
             type="button"
-            class="btn btn-1"
+            class="btn btn-3"
+            style="background-color:#740d57; color:#fff"
             data-bs-toggle="modal"
             data-bs-target="#exampleModal"
           >
