--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
           </div>
           <div class="box">
             <div class="text">
-              <h1>Mobile Phone ,Laptop and Gidget Repairs</h1>
+              <h1>Mobile Phone ,Laptop and Gadget Repairs</h1>
               <p>
                 <li>
                   <strong style="letter-spacing: 2px"
